--- a/.env.test
+++ b/.env.test
@@ -16,7 +16,7 @@ ADMIN_TOKEN_EXPIRED_TIME=86400
 # Database
 DB_USERNAME=root
 DB_PASSWORD=mongosecretfoodservice
-DB_NAME=mcstore-food
+DB_NAME=mcstore-food-test
 DB_HOST=localhost
 DB_PORT=27017
 
